Updated:
- Backpacks to 1.22.25.
- Bibliocraft to 1.5.4.
- Carpenter's Blocks to 1.9.7.
- CodeChickenCore to CodeChickenLib 1.0.0.45.
- EiraIRC to 1.4.3b.
- Factorization to 0.8.23.
- Forestry to 2.3.1.0.
- IndustrialCraft2 to 2.0.307.
- MobiusCore to 1.0.4.
- NotEnoughItems to 1.6.1.8.
- Opis to 1.1.2.
- PneumaticCraft to 1.0.0.
- RailCraft to 8.3.1.0.
- Steve's Carts to 2.0.0.b3.
- Tinker's Construct to 1.5.2.2.
- Waila to 1.4.3.
- XACT to 0.4.3.

Downgraded:
- None.

Added:
- JABBA 1.0.1.

Removed:
- None.