@@ -893,13 +893,13 @@
         <mod name="AppliedEnergistics"
             type="mods"
             description="Adds in a cool way of storing items electrically!"
-            version="rv14.finale"
+            version="rv14.finale2"
             website="http://ae-mod.info/"
             server="yes"
             optional="no"
-            url="packs/RedwoodServer/files/appeng-rv14-finale-mc16x.jar"
-            file="appeng-rv14-finale-mc16x.jar"
-            md5="1b8198bb21ddd7a5677432a37ab2840d"
+            url="packs/RedwoodServer/files/appeng-rv14-finale2-mc16x.jar"
+            file="appeng-rv14-finale2-mc16x.jar"
+            md5="dc11a2182d679c6c3513af4e62bb81e6"
             download="server"
             />
         <mod name="ExtraCells"
