@@ -1,4 +1,5 @@
 Updated:
+- Applied Energistics to Rv14finale2.
 - Backpacks to 1.22.25.
 - Bibliocraft to 1.5.4.
 - Carpenter's Blocks to 1.9.7.
